--- a/example-infrastructure-jpa/pom.xml
+++ b/example-infrastructure-jpa/pom.xml
@@ -24,5 +24,22 @@
             <artifactId>example-domain</artifactId>
             <version>1.4.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.codingapi.springboot</groupId>
+            <artifactId>springboot-starter-data-fast</artifactId>
+            <version>${codingapi.framework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
