--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <description>springboot-example project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
-        <codingapi.framework.version>1.4.5</codingapi.framework.version>
+        <codingapi.framework.version>${project.version}</codingapi.framework.version>
     </properties>
 
     <dependencies>
@@ -51,61 +51,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.codingapi.springboot</groupId>
             <artifactId>springboot-starter</artifactId>
             <version>${codingapi.framework.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.codingapi.springboot</groupId>
-            <artifactId>springboot-starter-security-jwt</artifactId>
-            <version>${codingapi.framework.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.codingapi.springboot</groupId>
-            <artifactId>springboot-starter-data-fast</artifactId>
-            <version>${codingapi.framework.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.codingapi.springboot</groupId>
-            <artifactId>springboot-starter-id-generator</artifactId>
-            <version>${codingapi.framework.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
 
 </project>
