--- a/example-restapi/src/main/resources/application.properties
+++ b/example-restapi/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8080
+server.port=18080
+application.version=@project.version@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./demo.db
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
