--- a/example-restapi/src/main/resources/application.properties
+++ b/example-restapi/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./demo.db
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 codingapi.id.generator.jdbc-url=jdbc:h2:mem:generator;DB_CLOSE_DELAY=-1
