--- a/example-restapi/src/main/resources/application.properties
+++ b/example-restapi/src/main/resources/application.properties
@@ -4,7 +4,7 @@ application.version=@project.version@
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./demo.db
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 
