--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <description>springboot-example project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
-        <codingapi.framework.version>${project.version}</codingapi.framework.version>
+        <codingapi.framework.version>3.1.7.dev</codingapi.framework.version>
     </properties>
 
     <dependencies>
