--- a/example-domain/pom.xml
+++ b/example-domain/pom.xml
@@ -20,9 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.codingapi.springboot</groupId>
-            <artifactId>springboot-starter-id-generator</artifactId>
-            <version>${codingapi.framework.version}</version>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
 
