--- a/example-restapi/src/main/resources/application.properties
+++ b/example-restapi/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
+spring.main.allow-bean-definition-overriding=true
 
 codingapi.security.ignore-urls=/open/**,/#/**,/,/**.css,/**.js,/**.svg,/**.png,/**.ico
