--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/pro-components": "^2.6.44",
     "@ant-design/use-emotion-css": "1.0.4",
+    "@monaco-editor/react": "^4.6.0",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.12.5",
     "classnames": "^2.3.2",
