--- a/example-restapi/src/main/resources/application.properties
+++ b/example-restapi/src/main/resources/application.properties
@@ -16,5 +16,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
+codingapi.security.jwt.enable=true
+#codingapi.security.redis.enable=true
+
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+
 
 codingapi.security.ignore-urls=/open/**,/#/**,/,/**.css,/**.js,/**.svg,/**.png,/**.ico
