--- a/pom.xml
+++ b/pom.xml
@@ -12,19 +12,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.8</version>
+        <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.codingapi.springboot</groupId>
     <artifactId>springboot-example</artifactId>
-    <version>3.2.0.dev</version>
+    <version>3.2.0</version>
 
     <name>springboot-example</name>
     <description>springboot-example project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
-        <codingapi.framework.version>3.2.0.dev</codingapi.framework.version>
+        <codingapi.framework.version>3.2.0</codingapi.framework.version>
     </properties>
 
     <dependencies>
